lab1/syntax.output
State 48 conflicts: 6 shift/reduce
State 76 conflicts: 6 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: %empty
    3           | ExtDef ExtDefList

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | Specifier error CompSt

    8 ExtDecList: VarDec
    9           | VarDec COMMA ExtDecList

   10 Specifier: TYPE
   11          | StructSpecifier

   12 StructSpecifier: STRUCT OptTag LC DefList RC
   13                | STRUCT Tag
   14                | Exp error

   15 OptTag: %empty
   16       | ID

   17 Tag: ID

   18 VarDec: ID
   19       | VarDec LB INT RB

   20 FunDec: ID LP VarList RP
   21       | ID LP RP
   22       | error RP

   23 VarList: ParamDec COMMA VarList
   24        | ParamDec

   25 ParamDec: Specifier VarDec

   26 CompSt: LC DefList StmtList RC
   27       | error RC

   28 StmtList: Stmt StmtList
   29         | %empty

   30 Stmt: Exp SEMI
   31     | CompSt
   32     | RETURN Exp SEMI
   33     | IF LP Exp RP Stmt
   34     | IF LP Exp RP Stmt ELSE Stmt
   35     | WHILE LP Exp RP Stmt
   36     | error SEMI
   37     | WHILE LP Exp error
   38     | Exp error

   39 DefList: %empty
   40        | Def DefList

   41 Def: Specifier DecList SEMI
   42    | Specifier error SEMI

   43 DecList: Dec
   44        | Dec COMMA DecList

   45 Dec: VarDec
   46    | VarDec ASSIGNOP Exp

   47 Exp: Exp ASSIGNOP Exp
   48    | Exp AND Exp
   49    | Exp OR Exp
   50    | Exp RELOP Exp
   51    | Exp PLUS Exp
   52    | Exp MINUS Exp
   53    | Exp STAR Exp
   54    | Exp DIV Exp
   55    | LP Exp RP
   56    | MINUS Exp
   57    | NOT Exp
   58    | ID LP Args RP
   59    | ID LP RP
   60    | Exp LB Exp RB
   61    | Exp DOT ID
   62    | ID
   63    | INT
   64    | FLOAT
   65    | Exp RELOP error
   66    | Exp ASSIGNOP error
   67    | Exp AND error
   68    | Exp OR error
   69    | Exp PLUS error
   70    | Exp MINUS error
   71    | Exp STAR error
   72    | Exp DIV error
   73    | Exp DOT error

   74 Args: Exp COMMA Args
   75     | Exp


Terminals, with rules where they appear

    $end (0) 0
    error <type_node> (256) 7 14 22 27 36 37 38 42 65 66 67 68 69 70 71 72 73
    SEMI <type_node> (258) 4 5 30 32 36 41 42
    COMMA <type_node> (259) 9 23 44 74
    ASSIGNOP <type_node> (260) 46 47 66
    RELOP <type_node> (261) 50 65
    PLUS <type_node> (262) 51 69
    MINUS <type_node> (263) 52 56 70
    STAR <type_node> (264) 53 71
    DIV <type_node> (265) 54 72
    AND <type_node> (266) 48 67
    OR <type_node> (267) 49 68
    DOT <type_node> (268) 61 73
    NOT <type_node> (269) 57
    TYPE <type_node> (270) 10
    LP <type_node> (271) 20 21 33 34 35 37 55 58 59
    RP <type_node> (272) 20 21 22 33 34 35 55 58 59
    LB <type_node> (273) 19 60
    RB <type_node> (274) 19 60
    LC <type_node> (275) 12 26
    RC <type_node> (276) 12 26 27
    STRUCT <type_node> (277) 12 13
    RETURN <type_node> (278) 32
    IF <type_node> (279) 33 34
    ELSE <type_node> (280) 34
    WHILE <type_node> (281) 35 37
    ID <type_node> (282) 16 17 18 20 21 58 59 61 62
    INT <type_node> (283) 19 63
    FLOAT <type_node> (284) 64
    LOWER_THAN_ELSE (285)


Nonterminals, with rules where they appear

    $accept (31)
        on left: 0
    Program <type_node> (32)
        on left: 1
        on right: 0
    ExtDefList <type_node> (33)
        on left: 2 3
        on right: 1 3
    ExtDef <type_node> (34)
        on left: 4 5 6 7
        on right: 3
    ExtDecList <type_node> (35)
        on left: 8 9
        on right: 4 9
    Specifier <type_node> (36)
        on left: 10 11
        on right: 4 5 6 7 25 41 42
    StructSpecifier <type_node> (37)
        on left: 12 13 14
        on right: 11
    OptTag <type_node> (38)
        on left: 15 16
        on right: 12
    Tag <type_node> (39)
        on left: 17
        on right: 13
    VarDec <type_node> (40)
        on left: 18 19
        on right: 8 9 19 25 45 46
    FunDec <type_node> (41)
        on left: 20 21 22
        on right: 6
    VarList <type_node> (42)
        on left: 23 24
        on right: 20 23
    ParamDec <type_node> (43)
        on left: 25
        on right: 23 24
    CompSt <type_node> (44)
        on left: 26 27
        on right: 6 7 31
    StmtList <type_node> (45)
        on left: 28 29
        on right: 26 28
    Stmt <type_node> (46)
        on left: 30 31 32 33 34 35 36 37 38
        on right: 28 33 34 35
    DefList <type_node> (47)
        on left: 39 40
        on right: 12 26 40
    Def <type_node> (48)
        on left: 41 42
        on right: 40
    DecList <type_node> (49)
        on left: 43 44
        on right: 41 44
    Dec <type_node> (50)
        on left: 45 46
        on right: 43 44
    Exp <type_node> (51)
        on left: 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73
        on right: 14 30 32 33 34 35 37 38 46 47 48 49 50 51 52 53 54 55 56 57 60 61 65 66 67 68 69 70 71 72 73 74 75
    Args <type_node> (52)
        on left: 74 75
        on right: 58 74


State 0

    0 $accept: . Program $end

    MINUS   shift, and go to state 1
    NOT     shift, and go to state 2
    TYPE    shift, and go to state 3
    LP      shift, and go to state 4
    STRUCT  shift, and go to state 5
    ID      shift, and go to state 6
    INT     shift, and go to state 7
    FLOAT   shift, and go to state 8

    $default  reduce using rule 2 (ExtDefList)

    Program          go to state 9
    ExtDefList       go to state 10
    ExtDef           go to state 11
    Specifier        go to state 12
    StructSpecifier  go to state 13
    Exp              go to state 14


State 1

   56 Exp: MINUS . Exp

    MINUS  shift, and go to state 1
    NOT    shift, and go to state 2
    LP     shift, and go to state 4
    ID     shift, and go to state 6
    INT    shift, and go to state 7
    FLOAT  shift, and go to state 8

    Exp  go to state 15


State 2

   57 Exp: NOT . Exp

    MINUS  shift, and go to state 1
    NOT    shift, and go to state 2
    LP     shift, and go to state 4
    ID     shift, and go to state 6
    INT    shift, and go to state 7
    FLOAT  shift, and go to state 8

    Exp  go to state 16


State 3

   10 Specifier: TYPE .

    $default  reduce using rule 10 (Specifier)


State 4

   55 Exp: LP . Exp RP

    MINUS  shift, and go to state 1
    NOT    shift, and go to state 2
    LP     shift, and go to state 4
    ID     shift, and go to state 6
    INT    shift, and go to state 7
    FLOAT  shift, and go to state 8

    Exp  go to state 17


State 5

   12 StructSpecifier: STRUCT . OptTag LC DefList RC
   13                | STRUCT . Tag

    ID  shift, and go to state 18

    $default  reduce using rule 15 (OptTag)

    OptTag  go to state 19
    Tag     go to state 20


State 6

   58 Exp: ID . LP Args RP
   59    | ID . LP RP
   62    | ID .

    LP  shift, and go to state 21

    $default  reduce using rule 62 (Exp)


State 7

   63 Exp: INT .

    $default  reduce using rule 63 (Exp)


State 8

   64 Exp: FLOAT .

    $default  reduce using rule 64 (Exp)


State 9

    0 $accept: Program . $end

    $end  shift, and go to state 22


State 10

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 11

    3 ExtDefList: ExtDef . ExtDefList

    MINUS   shift, and go to state 1
    NOT     shift, and go to state 2
    TYPE    shift, and go to state 3
    LP      shift, and go to state 4
    STRUCT  shift, and go to state 5
    ID      shift, and go to state 6
    INT     shift, and go to state 7
    FLOAT   shift, and go to state 8

    $default  reduce using rule 2 (ExtDefList)

    ExtDefList       go to state 23
    ExtDef           go to state 11
    Specifier        go to state 12
    StructSpecifier  go to state 13
    Exp              go to state 14


State 12

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt
    7       | Specifier . error CompSt

    error  shift, and go to state 24
    SEMI   shift, and go to state 25
    ID     shift, and go to state 26

    ExtDecList  go to state 27
    VarDec      go to state 28
    FunDec      go to state 29


State 13

   11 Specifier: StructSpecifier .

    $default  reduce using rule 11 (Specifier)


State 14

   14 StructSpecifier: Exp . error
   47 Exp: Exp . ASSIGNOP Exp
   48    | Exp . AND Exp
   49    | Exp . OR Exp
   50    | Exp . RELOP Exp
   51    | Exp . PLUS Exp
   52    | Exp . MINUS Exp
   53    | Exp . STAR Exp
   54    | Exp . DIV Exp
   60    | Exp . LB Exp RB
   61    | Exp . DOT ID
   65    | Exp . RELOP error
   66    | Exp . ASSIGNOP error
   67    | Exp . AND error
   68    | Exp . OR error
   69    | Exp . PLUS error
   70    | Exp . MINUS error
   71    | Exp . STAR error
   72    | Exp . DIV error
   73    | Exp . DOT error

    error     shift, and go to state 30
    ASSIGNOP  shift, and go to state 31
    RELOP     shift, and go to state 32
    PLUS      shift, and go to state 33
    MINUS     shift, and go to state 34
    STAR      shift, and go to state 35
    DIV       shift, and go to state 36
    AND       shift, and go to state 37
    OR        shift, and go to state 38
    DOT       shift, and go to state 39
    LB        shift, and go to state 40


State 15

   47 Exp: Exp . ASSIGNOP Exp
   48    | Exp . AND Exp
   49    | Exp . OR Exp
   50    | Exp . RELOP Exp
   51    | Exp . PLUS Exp
   52    | Exp . MINUS Exp
   53    | Exp . STAR Exp
   54    | Exp . DIV Exp
   56    | MINUS Exp .
   60    | Exp . LB Exp RB
   61    | Exp . DOT ID
   65    | Exp . RELOP error
   66    | Exp . ASSIGNOP error
   67    | Exp . AND error
   68    | Exp . OR error
   69    | Exp . PLUS error
   70    | Exp . MINUS error
   71    | Exp . STAR error
   72    | Exp . DIV error
   73    | Exp . DOT error

    STAR  shift, and go to state 35
    DIV   shift, and go to state 36
    DOT   shift, and go to state 39
    LB    shift, and go to state 40

    $default  reduce using rule 56 (Exp)


State 16

   47 Exp: Exp . ASSIGNOP Exp
   48    | Exp . AND Exp
   49    | Exp . OR Exp
   50    | Exp . RELOP Exp
   51    | Exp . PLUS Exp
   52    | Exp . MINUS Exp
   53    | Exp . STAR Exp
   54    | Exp . DIV Exp
   57    | NOT Exp .
   60    | Exp . LB Exp RB
   61    | Exp . DOT ID
   65    | Exp . RELOP error
   66    | Exp . ASSIGNOP error
   67    | Exp . AND error
   68    | Exp . OR error
   69    | Exp . PLUS error
   70    | Exp . MINUS error
   71    | Exp . STAR error
   72    | Exp . DIV error
   73    | Exp . DOT error

    DOT  shift, and go to state 39
    LB   shift, and go to state 40

    $default  reduce using rule 57 (Exp)


State 17

   47 Exp: Exp . ASSIGNOP Exp
   48    | Exp . AND Exp
   49    | Exp . OR Exp
   50    | Exp . RELOP Exp
   51    | Exp . PLUS Exp
   52    | Exp . MINUS Exp
   53    | Exp . STAR Exp
   54    | Exp . DIV Exp
   55    | LP Exp . RP
   60    | Exp . LB Exp RB
   61    | Exp . DOT ID
   65    | Exp . RELOP error
   66    | Exp . ASSIGNOP error
   67    | Exp . AND error
   68    | Exp . OR error
   69    | Exp . PLUS error
   70    | Exp . MINUS error
   71    | Exp . STAR error
   72    | Exp . DIV error
   73    | Exp . DOT error

    ASSIGNOP  shift, and go to state 31
    RELOP     shift, and go to state 32
    PLUS      shift, and go to state 33
    MINUS     shift, and go to state 34
    STAR      shift, and go to state 35
    DIV       shift, and go to state 36
    AND       shift, and go to state 37
    OR        shift, and go to state 38
    DOT       shift, and go to state 39
    RP        shift, and go to state 41
    LB        shift, and go to state 40


State 18

   16 OptTag: ID .
   17 Tag: ID .

    LC        reduce using rule 16 (OptTag)
    $default  reduce using rule 17 (Tag)


State 19

   12 StructSpecifier: STRUCT OptTag . LC DefList RC

    LC  shift, and go to state 42


State 20

   13 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 13 (StructSpecifier)


State 21

   58 Exp: ID LP . Args RP
   59    | ID LP . RP

    MINUS  shift, and go to state 1
    NOT    shift, and go to state 2
    LP     shift, and go to state 4
    RP     shift, and go to state 43
    ID     shift, and go to state 6
    INT    shift, and go to state 7
    FLOAT  shift, and go to state 8

    Exp   go to state 44
    Args  go to state 45


State 22

    0 $accept: Program $end .

    $default  accept


State 23

    3 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 3 (ExtDefList)


State 24

    7 ExtDef: Specifier error . CompSt
   22 FunDec: error . RP

    error  shift, and go to state 46
    RP     shift, and go to state 47
    LC     shift, and go to state 48

    CompSt  go to state 49


State 25

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


State 26

   18 VarDec: ID .
   20 FunDec: ID . LP VarList RP
   21       | ID . LP RP

    LP  shift, and go to state 50

    $default  reduce using rule 18 (VarDec)


State 27

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 51


State 28

    8 ExtDecList: VarDec .
    9           | VarDec . COMMA ExtDecList
   19 VarDec: VarDec . LB INT RB

    COMMA  shift, and go to state 52
    LB     shift, and go to state 53

    $default  reduce using rule 8 (ExtDecList)


State 29

    6 ExtDef: Specifier FunDec . CompSt

    error  shift, and go to state 46
    LC     shift, and go to state 48

    CompSt  go to state 54


State 30

   14 StructSpecifier: Exp error .

    $default  reduce using rule 14 (StructSpecifier)


State 31

   47 Exp: Exp ASSIGNOP . Exp
   66    | Exp ASSIGNOP . error

    error  shift, and go to state 55
    MINUS  shift, and go to state 1
    NOT    shift, and go to state 2
    LP     shift, and go to state 4
    ID     shift, and go to state 6
    INT    shift, and go to state 7
    FLOAT  shift, and go to state 8

    Exp  go to state 56


State 32

   50 Exp: Exp RELOP . Exp
   65    | Exp RELOP . error

    error  shift, and go to state 57
    MINUS  shift, and go to state 1
    NOT    shift, and go to state 2
    LP     shift, and go to state 4
    ID     shift, and go to state 6
    INT    shift, and go to state 7
    FLOAT  shift, and go to state 8

    Exp  go to state 58


State 33

   51 Exp: Exp PLUS . Exp
   69    | Exp PLUS . error

    error  shift, and go to state 59
    MINUS  shift, and go to state 1
    NOT    shift, and go to state 2
    LP     shift, and go to state 4
    ID     shift, and go to state 6
    INT    shift, and go to state 7
    FLOAT  shift, and go to state 8

    Exp  go to state 60


State 34

   52 Exp: Exp MINUS . Exp
   70    | Exp MINUS . error

    error  shift, and go to state 61
    MINUS  shift, and go to state 1
    NOT    shift, and go to state 2
    LP     shift, and go to state 4
    ID     shift, and go to state 6
    INT    shift, and go to state 7
    FLOAT  shift, and go to state 8

    Exp  go to state 62


State 35

   53 Exp: Exp STAR . Exp
   71    | Exp STAR . error

    error  shift, and go to state 63
    MINUS  shift, and go to state 1
    NOT    shift, and go to state 2
    LP     shift, and go to state 4
    ID     shift, and go to state 6
    INT    shift, and go to state 7
    FLOAT  shift, and go to state 8

    Exp  go to state 64


State 36

   54 Exp: Exp DIV . Exp
   72    | Exp DIV . error

    error  shift, and go to state 65
    MINUS  shift, and go to state 1
    NOT    shift, and go to state 2
    LP     shift, and go to state 4
    ID     shift, and go to state 6
    INT    shift, and go to state 7
    FLOAT  shift, and go to state 8

    Exp  go to state 66


State 37

   48 Exp: Exp AND . Exp
   67    | Exp AND . error

    error  shift, and go to state 67
    MINUS  shift, and go to state 1
    NOT    shift, and go to state 2
    LP     shift, and go to state 4
    ID     shift, and go to state 6
    INT    shift, and go to state 7
    FLOAT  shift, and go to state 8

    Exp  go to state 68


State 38

   49 Exp: Exp OR . Exp
   68    | Exp OR . error

    error  shift, and go to state 69
    MINUS  shift, and go to state 1
    NOT    shift, and go to state 2
    LP     shift, and go to state 4
    ID     shift, and go to state 6
    INT    shift, and go to state 7
    FLOAT  shift, and go to state 8

    Exp  go to state 70


State 39

   61 Exp: Exp DOT . ID
   73    | Exp DOT . error

    error  shift, and go to state 71
    ID     shift, and go to state 72


State 40

   60 Exp: Exp LB . Exp RB

    MINUS  shift, and go to state 1
    NOT    shift, and go to state 2
    LP     shift, and go to state 4
    ID     shift, and go to state 6
    INT    shift, and go to state 7
    FLOAT  shift, and go to state 8

    Exp  go to state 73


State 41

   55 Exp: LP Exp RP .

    $default  reduce using rule 55 (Exp)


State 42

   12 StructSpecifier: STRUCT OptTag LC . DefList RC

    MINUS   shift, and go to state 1
    NOT     shift, and go to state 2
    TYPE    shift, and go to state 3
    LP      shift, and go to state 4
    STRUCT  shift, and go to state 5
    ID      shift, and go to state 6
    INT     shift, and go to state 7
    FLOAT   shift, and go to state 8

    $default  reduce using rule 39 (DefList)

    Specifier        go to state 74
    StructSpecifier  go to state 13
    DefList          go to state 75
    Def              go to state 76
    Exp              go to state 14


State 43

   59 Exp: ID LP RP .

    $default  reduce using rule 59 (Exp)


State 44
